# Elek

ismail-dogan-elektrik/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ismail-dogan-elektrik/.github/workflows/: ci.yml
ismail-dogan-elektrik/backend/: Dockerfile  pytest.ini  requirements.txt
ismail-dogan-elektrik/backend/app/: __init__.py  celery_app.py  config.py  database.py  db_models.py  main.py
ismail-dogan-elektrik/backend/app/database/: __init__.py  connection.py
ismail-dogan-elektrik/backend/app/models/: __init__.py  booking.py  service.py
ismail-dogan-elektrik/backend/app/routers/: __init__.py  bookings.py  services.py
ismail-dogan-elektrik/backend/app/services/: __init__.py  rust_binding.py
ismail-dogan-elektrik/backend/tests/: __init__.py  test_api.py
ismail-dogan-elektrik/database/init/: 01-schema.sql
ismail-dogan-elektrik/frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ismail-dogan-elektrik/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.ts
ismail-dogan-elektrik/frontend/components/: index.ts
ismail-dogan-elektrik/frontend/lib/: api.ts  utils.ts
ismail-dogan-elektrik/frontend/public/: manifest.json  robots.txt
ismail-dogan-elektrik/frontend/types/: index.ts
ismail-dogan-elektrik/nginx/: nginx.conf
ismail-dogan-elektrik/nginx/ssl/: .gitkeep
ismail-dogan-elektrik/rust-engine/: Cargo.toml
ismail-dogan-elektrik/rust-engine/benches/: calculations.rs
ismail-dogan-elektrik/rust-engine/src/: lib.rs
(+19 files in other folders)
